# Topological-phylogeny-

./: .gitignore  CMakeLists.txt  EXECUTION_FLOW_ANALYSIS.md  MLVMST_INPUT_EXPLANATION.md  README.md  convert_nwk_to_test_data.py
data/: carnivora_species_test.txt  primates_genus_test.txt  small_test_1.txt  small_test_2.txt  small_test_3.txt
include/: algorithm2.h  clnj.h  common_types.h  data_loader.h  mlvmst.h  mlvmst_boruvka.h
python_preprocessing/: python_patristic_optimized.py
src/: algorithm2.cpp  clnj_fresh.cpp  data_loader.cpp  main_clnj_boruvka.cpp  mlvmst.cpp  mlvmst_boruvka.cpp
